--- a/notebooks/2_baselines_qevasion_v2.ipynb
+++ b/notebooks/2_baselines_qevasion_v2.ipynb
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -999,11 +999,11 @@
       "Note: Prediction counted as correct if it matches ANY annotator.\n",
       "\n",
       "Example predictions vs annotator labels:\n",
-      "✓ Pred: Dodging              | Gold: {'Dodging', 'General'}\n",
-      "✓ Pred: General              | Gold: {'Deflection', 'General'}\n",
-      "✓ Pred: Explicit             | Gold: {'Explicit', 'Implicit'}\n",
-      "✓ Pred: General              | Gold: {'Explicit', 'General'}\n",
-      "✗ Pred: Claims ignorance     | Gold: {'Implicit', 'Dodging'}\n"
+      "✅ Pred: Dodging              | Gold: {'Dodging', 'General'}\n",
+      "✅ Pred: General              | Gold: {'Deflection', 'General'}\n",
+      "✅ Pred: Explicit             | Gold: {'Explicit', 'Implicit'}\n",
+      "✅ Pred: General              | Gold: {'Explicit', 'General'}\n",
+      "❌ Pred: Claims ignorance     | Gold: {'Implicit', 'Dodging'}\n"
      ]
     }
    ],
@@ -1032,7 +1032,7 @@
     "for i in range(min(5, len(y_svm_eva_test_labels))):\n",
     "    pred = y_svm_eva_test_labels[i]\n",
     "    gold = gold_sets[i]\n",
-    "    correct = \"✓\" if pred in gold else \"✗\"\n",
+    "    correct = \"✅\" if pred in gold else \"❌\"\n",
     "    print(f\"{correct} Pred: {pred:20s} | Gold: {gold}\")"
    ]
   },
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1143,7 @@
     "        'Model': 'Logistic Regression',\n",
     "        'Val Accuracy': lr_eva_metrics_val['accuracy'],\n",
     "        'Val Macro F1': lr_eva_metrics_val['macro_f1'],\n",
-    "        'Test Accuracy (Any)': None  # Can add if desired\n",
+    "        'Test Accuracy (Any)': None \n",
     "    },\n",
     "    {\n",
     "        'Model': 'Linear SVM',\n",
