Report: Update the system overview section

--- a/report/main.tex
+++ b/report/main.tex
@@ -32,6 +32,10 @@
 %additional package(s)
 \usepackage{graphicx}
 
+\usepackage{amsmath, amssymb}
+\usepackage{booktabs}
+\usepackage{tikz}
+\usetikzlibrary{positioning, arrows.meta}
 
 \title{Unmasking Political Question Evasions}
 
