--- a/report/sections/abstract.tex
+++ b/report/sections/abstract.tex
@@ -1,1 +1,1 @@
-Question evasion is a pervasive strategy in political communication, where speakers avoid addressing the information requested while maintaining rhetorical control. This phenomenon is the focus of the CLARITY shared task at SemEval-2026, which targets the automatic identification of evasive behavior in political question–answer pairs. This paper presents a supervised classification approach to equivocation detection, using a transformer-based language model that jointly encodes questions and responses. Through a series of experiments, we examine how modeling question–answer interactions affects detection performance. The results show... TO INCLUDE WHEN WE KNOW
+Question evasion is a pervasive strategy in political communication, where speakers avoid addressing the information requested while maintaining rhetorical control. This phenomenon is the focus of the CLARITY shared task at SemEval-2026, which targets the automatic identification of evasive behavior in political question–answer pairs. This paper presents a supervised classification approach to equivocation detection using transformer-based language models that jointly encode questions and responses. Through a series of experiments, we examine how modeling question–answer interactions affects detection performance. Our results show... TO INCLUDE WHEN WE KNOW
