--- a/report/custom.bib
+++ b/report/custom.bib
@@ -1,70 +1,102 @@
 % Use this file for citations not found in the ACL Anthology (contained in "anthology.bib").
 
+@misc{qevasion,
+  title     = {QEvasion: Political Question Evasion Dataset},
+  author    = {AilsntuaLab},
+  publisher = {Hugging Face},
+  year      = {2024},
+  url       = {https://huggingface.co/datasets/ailsntua/QEvasion},
+  note      = {Version: [commit-hash or date accessed]; Accessed: 2026-01-05}
+}
+
+@article{sanh2019distilbert,
+  title   = {Distil{BERT}, a distilled version of {BERT}: smaller, faster, cheaper and lighter},
+  author  = {Sanh, Victor and Debut, Lysandre and Chaumond, Julien and Wolf, Thomas},
+  journal = {arXiv preprint arXiv:1910.01108},
+  year    = {2019}
+}
+
+@article{lin2017focal,
+  title   = {Focal Loss for Dense Object Detection},
+  author  = {Lin, Tsung-Yi and Goyal, Priya and Girshick, Ross and He, Kaiming and Doll{'a}, Piotr},
+  journal = {arXiv preprint arXiv:1708.02002},
+  year    = {2017}
+}
+
+@article{wolf2019transformers,
+  title   = {HuggingFace's Transformers: State-of-the-art Natural Language Processing},
+  author  = {Wolf, Thomas and Debut, Lysandre and Sanh, Victor and Chaumond, Julien and Delangue, Clement and Moi, Anthony and Cistac, Pierric and Rault, Tim and Louf, R{'e}mi and Funtowicz, Morgan and others},
+  journal = {arXiv preprint arXiv:1910.03771},
+  year    = {2019}
+}
+
+--Examples--
+
 @book{Aho:72,
-    author  = {Alfred V. Aho and Jeffrey D. Ullman},
-    title   = {The Theory of Parsing, Translation and Compiling},
-    year    = "1972",
-    volume  = "1",
-    publisher = {Prentice-Hall},
-    address = {Englewood Cliffs, NJ}
+  author    = {Alfred V. Aho and Jeffrey D. Ullman},
+  title     = {The Theory of Parsing, Translation and Compiling},
+  year      = {1972},
+  volume    = {1},
+  publisher = {Prentice-Hall},
+  address   = {Englewood Cliffs, NJ}
 }
 
 @book{APA:83,
-    author  = {{American Psychological Association}},
-    title   = {Publications Manual},
-    year    = "1983",
-    publisher = {American Psychological Association},
-    address = {Washington, DC}
+  author    = {{American Psychological Association}},
+  title     = {Publications Manual},
+  year      = {1983},
+  publisher = {American Psychological Association},
+  address   = {Washington, DC}
 }
 
 @article{Chandra:81,
-	author = {Ashok K. Chandra and Dexter C. Kozen and Larry J. Stockmeyer},
-	year = "1981",
-	title = {Alternation},
-	journal = {Journal of the Association for Computing Machinery},
-	volume = "28",
-	number = "1",
-	pages = "114--133",
-	doi = "10.1145/322234.322243",
+  author  = {Ashok K. Chandra and Dexter C. Kozen and Larry J. Stockmeyer},
+  year    = {1981},
+  title   = {Alternation},
+  journal = {Journal of the Association for Computing Machinery},
+  volume  = {28},
+  number  = {1},
+  pages   = {114--133},
+  doi     = {10.1145/322234.322243}
 }
 
 @inproceedings{andrew2007scalable,
-  title={Scalable training of {L1}-regularized log-linear models},
-  author={Andrew, Galen and Gao, Jianfeng},
-  booktitle={Proceedings of the 24th International Conference on Machine Learning},
-  pages={33--40},
-  year={2007},
+  title     = {Scalable training of {L1}-regularized log-linear models},
+  author    = {Andrew, Galen and Gao, Jianfeng},
+  booktitle = {Proceedings of the 24th International Conference on Machine Learning},
+  pages     = {33--40},
+  year      = {2007}
 }
 
 @book{Gusfield:97,
-    author  = {Dan Gusfield},
-    title   = {Algorithms on Strings, Trees and Sequences},
-    year    = "1997",
-    publisher = {Cambridge University Press},
-    address = {Cambridge, UK}
+  author    = {Dan Gusfield},
+  title     = {Algorithms on Strings, Trees and Sequences},
+  year      = {1997},
+  publisher = {Cambridge University Press},
+  address   = {Cambridge, UK}
 }
 
 @article{rasooli-tetrault-2015,
-    author    = {Mohammad Sadegh Rasooli and Joel R. Tetreault},
-    title     = {Yara Parser: {A} Fast and Accurate Dependency Parser},
-    journal   = {Computing Research Repository},
-    volume    = {arXiv:1503.06733},
-    year      = {2015},
-    url       = {http://arxiv.org/abs/1503.06733},
-    note    = {version 2}
+  author  = {Mohammad Sadegh Rasooli and Joel R. Tetreault},
+  title   = {Yara Parser: {A} Fast and Accurate Dependency Parser},
+  journal = {Computing Research Repository},
+  volume  = {arXiv:1503.06733},
+  year    = {2015},
+  url     = {http://arxiv.org/abs/1503.06733},
+  note    = {version 2}
 }
 
 @article{Ando2005,
-	Acmid = {1194905},
-	Author = {Ando, Rie Kubota and Zhang, Tong},
-	Issn = {1532-4435},
-	Issue_Date = {12/1/2005},
-	Journal = {Journal of Machine Learning Research},
-	Month = dec,
-	Numpages = {37},
-	Pages = {1817--1853},
-	Publisher = {JMLR.org},
-	Title = {A Framework for Learning Predictive Structures from Multiple Tasks and Unlabeled Data},
-	Volume = {6},
-	Year = {2005}
+  acmid      = {1194905},
+  author     = {Ando, Rie Kubota and Zhang, Tong},
+  issn       = {1532-4435},
+  issue_date = {12/1/2005},
+  journal    = {Journal of Machine Learning Research},
+  month      = dec,
+  numpages   = {37},
+  pages      = {1817--1853},
+  publisher  = {JMLR.org},
+  title      = {A Framework for Learning Predictive Structures from Multiple Tasks and Unlabeled Data},
+  volume     = {6},
+  year       = {2005}
 }
