--- a/report/custom.bib
+++ b/report/custom.bib
@@ -30,6 +30,63 @@
   year    = {2019}
 }
 
+@misc{thomas2024isaidthatdataset,
+      title={"I Never Said That": A dataset, taxonomy and baselines on response clarity classification}, 
+      author={Konstantinos Thomas and Giorgos Filandrianos and Maria Lymperaiou and Chrysoula Zerva and Giorgos Stamou},
+      year={2024},
+      eprint={2409.13879},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2409.13879}, 
+}
+
+@article{Alvarez_2025,
+   title={Measuring the Quality of Answers in Political Q&amp;As with Large Language Models},
+   volume={34},
+   ISSN={1476-4989},
+   url={http://dx.doi.org/10.1017/pan.2025.10007},
+   DOI={10.1017/pan.2025.10007},
+   number={1},
+   journal={Political Analysis},
+   publisher={Cambridge University Press (CUP)},
+   author={Alvarez, R. Michael and Morrier, Jacob},
+   year={2025},
+   month=jul, pages={78–95} }
+
+@misc{farea2022evaluationquestionansweringsystems,
+      title={Evaluation of Question Answering Systems: Complexity of judging a natural language}, 
+      author={Amer Farea and Zhen Yang and Kien Duong and Nadeesha Perera and Frank Emmert-Streib},
+      year={2022},
+      eprint={2209.12617},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2209.12617}, 
+}
+
+@misc{joseph2017constancemodelingannotationcontexts,
+      title={ConStance: Modeling Annotation Contexts to Improve Stance Classification}, 
+      author={Kenneth Joseph and Lisa Friedland and William Hobbs and Oren Tsur and David Lazer},
+      year={2017},
+      eprint={1708.06309},
+      archivePrefix={arXiv},
+      primaryClass={cs.SI},
+      url={https://arxiv.org/abs/1708.06309}, 
+}
+
+@article{RASIAH2010664,
+    title={A framework for the systematic analysis of evasion in parliamentary discourse},
+    author={Parameswary Rasiah},
+    journal={Journal of Pragmatics},
+    volume={42},
+    number={3},
+    pages={664-680},
+    year={2010},
+    issn={0378-2166},
+    doi={https://doi.org/10.1016/j.pragma.2009.07.010},
+    url={https://www.sciencedirect.com/science/article/pii/S0378216609001866},
+    keywords={Question Time, Parliamentary questions, Responses, Evasion, Agenda shifts},
+}
+
 --Examples--
 
 @book{Aho:72,
