--- a/report/custom.bib
+++ b/report/custom.bib
@@ -87,6 +87,16 @@
     keywords={Question Time, Parliamentary questions, Responses, Evasion, Agenda shifts},
 }
 
+@inproceedings{kendall2018multitask,
+  title     = {Multi-Task Learning Using Uncertainty to Weigh Losses for Scene Geometry and Semantics},
+  author    = {Kendall, Alex and Gal, Yarin and Cipolla, Roberto},
+  booktitle = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year      = {2018},
+  pages     = {7482--7491},
+  doi       = {10.48550/arXiv.1705.07115}
+}
+
+
 --Examples--
 
 @book{Aho:72,
