--- a/report/main.tex
+++ b/report/main.tex
@@ -34,7 +34,7 @@
 
 \usepackage{amsmath, amssymb}
 \usepackage{booktabs}
-\usepackage{tikz}
+\usepackage{pgfplots, tikz}
 \usetikzlibrary{positioning, arrows.meta}
 
 \title{Unmasking Political Question Evasions}
@@ -67,13 +67,6 @@
 
 
 \bibliography{custom}
-
-\appendix
-
-\section{Example Appendix}
-\label{sec:appendix}
-
-This is an appendix.
 
 \end{document}
 
