--- a/report/sections/abstract.tex
+++ b/report/sections/abstract.tex
@@ -1,1 +1,3 @@
-Question evasion is a pervasive strategy in political communication, where speakers avoid addressing the information requested while maintaining rhetorical control. This phenomenon is the focus of the CLARITY shared task at SemEval-2026, which targets the automatic identification of evasive behavior in political question–answer pairs. This paper presents a supervised classification approach to equivocation detection using transformer-based language models that jointly encode questions and responses. We compare baseline methods (SVM with TF-IDF features) against fine-tuned transformers (BERT, DistilBERT, ALBERT) for two subtasks: clarity-level classification (3 classes) and evasion strategy identification (9 classes). We further explore multi-task learning to leverage shared representations across tasks. Our best single-task model achieves 68.8\% accuracy and 0.50 macro F1 on Task 1 (Clarity), while Task 2 (Evasion) proves more challenging with 44.2\% accuracy under multi-annotator evaluation. Analysis reveals that class imbalance and annotator disagreement remain key challenges for fine-grained evasion classification.
+Question evasion is a recurrent phenomenon in political communication, where speakers respond to questions without directly addressing the requested information. The CLARITY shared task at SemEval-2026 addresses this challenge by framing political evasion detection as supervised classification over political question--answer pairs, with subtasks focusing on response clarity and evasion strategy identification.
+
+In this work, we conduct a systematic study of modeling approaches for political evasion detection on the QEvasion dataset. We compare classical machine learning baselines with transformer-based models that jointly encode questions and answers, and we evaluate both single-task and multi-task learning settings. In addition, we explore a prompt-based approach using a large language model to perform clarity and evasion classification through in-context learning. This study highlights the strengths and limitations of different modeling paradigms for capturing pragmatic aspects of political responses.
